Fix spacing between blog cards to close #24

--- a/editor.css
+++ b/editor.css
@@ -1225,7 +1225,9 @@
     --novablocks-media-content-padding: var(--theme-spacing-fluid-large);
     --novablocks-media-spacing: var(--theme-spacing-fluid-normal); }
   .editor-styles-wrapper .novablocks-media--blog[class] {
-    --element-spacing: var(--theme-spacing-small); }
+    margin-top: 0; }
+    .editor-styles-wrapper .novablocks-media--blog[class]:not(:first-child) {
+      padding-top: var(--theme-spacing-small); }
     .editor-styles-wrapper .novablocks-media--blog[class] .novablocks-media__content {
       margin-bottom: 0; }
   @media not screen and (min-width: 768px) {
